Adapted opentrafficsim to version 1.00. New dsol version. Updated all libraries. Updated all maven plugin versions. Replaced log4j by tinylog. Replaced jmockit by Powermockito.