@@ -54,6 +54,7 @@
   </profiles>
 
   <properties>
+  
     <jdk.version>1.8</jdk.version>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
@@ -61,51 +62,50 @@
 
     <sonar.scm.disabled>true</sonar.scm.disabled>
 
+    <tinylog.version>1.3.5</tinylog.version>
     <ots.version>${project.version}</ots.version>
-    <djunits.version>3.00.03</djunits.version>
-    <dsol.version>3.01.06</dsol.version>
-    <sim0mq.version>0.02.00</sim0mq.version>
-    <junit.version>4.11</junit.version>
+    <djunits.version>3.00.07</djunits.version>
+    <dsol.version>3.02.02</dsol.version>
+    <sim0mq.version>0.05.00</sim0mq.version>
+    <junit.version>4.12</junit.version>
     <java3d.version>1.5.1</java3d.version>
-    <geotools.version>12.0</geotools.version>
-    <osmosis.version>0.43.1</osmosis.version>
-    <jfreechart.version>1.0.17</jfreechart.version>
+    <geotools.version>19.1</geotools.version>
+    <osmosis.version>0.46</osmosis.version>
+    <jfreechart.version>1.5.0</jfreechart.version>
     <xml-apis.version>1.4.01</xml-apis.version>
-    <apache.poi.version>3.8</apache.poi.version>
-    <jgrapht.version>0.9.0</jgrapht.version>
+    <apache.poi.version>4.0.0</apache.poi.version>
+    <jgrapht.version>1.2.0</jgrapht.version>
     <multislider.version>1.0</multislider.version>
-    <ojalgo.version>38.2</ojalgo.version>
-    <osm.version>0.43.1</osm.version>
+    <ojalgo.version>46.1.0</ojalgo.version>
+    <osm.version>0.46</osm.version>
     <findbugs.version>3.0.1u2</findbugs.version>
-    <jmockit.version>1.27</jmockit.version>
+    <xstream.version>1.4.10</xstream.version>
+    <powermock.version>1.7.4</powermock.version>
 
     <maven.compiler.version>3.8.0</maven.compiler.version>
-    <maven.site.version>3.4</maven.site.version>
+    <maven.site.version>3.7.1</maven.site.version>
     <maven.deploy.version>2.8.2</maven.deploy.version>
     <maven.install.version>2.5.2</maven.install.version>
-    <maven.source.version>2.4</maven.source.version>
-    <maven.javadoc.version>2.10.3</maven.javadoc.version>
-    <maven.checkstyle.version>2.16</maven.checkstyle.version>
-    <maven.surefire.version>2.18.1</maven.surefire.version>
-    <maven.surefire-report.version>2.18.1</maven.surefire-report.version>
-    <maven.failsafe.version>2.18.1</maven.failsafe.version>
-    <!-- maven.cobertura.version>2.7</maven.cobertura.version -->
-    <maven.jacoco.version>0.7.5.201505241946</maven.jacoco.version>
-    <maven.findbugs.version>3.0.1</maven.findbugs.version>
-    <maven.project-info-reports.version>2.8.1</maven.project-info-reports.version>
+    <maven.source.version>3.0.1</maven.source.version>
+    <maven.javadoc.version>3.0.1</maven.javadoc.version>
+    <maven.checkstyle.version>3.0.0</maven.checkstyle.version>
+    <maven.surefire.version>2.22.0</maven.surefire.version>
+    <maven.surefire-report.version>2.22.0</maven.surefire-report.version>
+    <maven.failsafe.version>2.22.0</maven.failsafe.version>
+    <maven.jacoco.version>0.8.2</maven.jacoco.version>
+    <maven.project-info-reports.version>3.0.0</maven.project-info-reports.version>
     <maven.jxr.version>2.5</maven.jxr.version>
     <maven.taglist.version>2.4</maven.taglist.version>
-    <maven.pmd.version>3.6</maven.pmd.version>
-    <maven.changes.version>2.11</maven.changes.version>
-    <wagon.maven.version>1.0</wagon.maven.version>
-    <wagon.ssh.version>2.10</wagon.ssh.version>
-    <wagon.ftp.version>2.10</wagon.ftp.version>
-    <!-- codehaus.javancss.version>2.1</codehaus.javancss.version -->
-    <codehaus.jdepend.version>2.0</codehaus.jdepend.version>
+    <maven.findbugs.version>3.0.5</maven.findbugs.version>
+    <maven.pmd.version>3.10.0</maven.pmd.version>
+    <maven.changes.version>2.12.1</maven.changes.version>
+    <wagon.maven.version>2.0.0</wagon.maven.version>
+    <wagon.ssh.version>3.1.0</wagon.ssh.version>
+    <wagon.ftp.version>3.1.0</wagon.ftp.version>
 
   </properties>
 
-
+  
   <!-- Build Settings -->
 
   <build>
@@ -123,8 +123,10 @@
     </resources>
     <testResources>
       <testResource>
+        <directory>${basedir}/src/main/resources</directory>
+      </testResource>
+      <testResource>
         <directory>${basedir}/src/test/resources</directory>
-        <filtering>false</filtering>
       </testResource>
     </testResources>
 
@@ -270,16 +272,32 @@
         <version>${maven.javadoc.version}</version>
         <configuration>
           <links>
-            <link>http://download.oracle.com/javase/7/docs/api/</link>
-            <link>http://download.java.net/media/java3d/javadoc/1.5.0/</link>
+            <link>https://docs.oracle.com/javase/8/docs/api/</link>
+            <!-- link>https://download.java.net/media/java3d/javadoc/1.5.1/</link (No package-list) -->
             <link>http://www.jfree.org/jcommon/api/</link>
             <link>http://www.jfree.org/jfreechart/api/javadoc/</link>
-            <link>http://junit.sourceforge.net/javadoc/</link>
-            <link>http://xerces.apache.org/xerces2-j/javadocs/api/</link>
-            <link>http://www.jdom.org/docs/apidocs/</link>
-            <link>http://simulation.tudelft.nl/dsol/3.0/dsol-base/apidocs/</link>
-            <link>http://simulation.tudelft.nl/dsol/3.0/dsol-core/apidocs/</link>
-            <link>http://simulation.tudelft.nl/dsol/3.0/dsol-swing/apidocs/</link>
+            <link>https://junit.org/junit4/javadoc/4.12/</link>
+            <link>https://xerces.apache.org/xerces2-j/javadocs/api/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-base/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-naming/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-event/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-interpreter/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-introspection/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-core/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-swing/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-fx/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-web/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-demo/apidocs/</link>
+            <link>https://tinylog.org/javadoc/</link>
+            <link>https://djunits.orgs/current/apidocs/</link>
+            <link>http://www.jdom.orgs/apidocs/</link>
+            <link>https://dst.lbl.gov/ACSSoftware/colt/api/</link>
+            <link>https://sim0mq.org/docs/current/apidocs/</link>
+            <link>http://docs.geotools.org/stable/javadocs/</link>
+            <link>http://osm2world.org/docs/javadoc/</link>
+            <link>https://poi.apache.org/apidocs/</link>
+            <link>https://jgrapht.org/javadoc/</link>
+            <link>http://javadoc.scijava.org/ojAlgo/</link>
           </links>
           <additionalJOption>-J-Xmx1024m</additionalJOption>
           <detectJavaApiLink>true</detectJavaApiLink>
@@ -309,23 +327,6 @@
           </dependency>
         </dependencies>
       </plugin>
-
-      <!-- plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>cobertura-maven-plugin</artifactId>
-        <version>${maven.cobertura.version}</version>
-        <executions>
-          <execution>
-            <goals>
-              <goal>instrument</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <argLine>-XX:MaxPermSize=4096m
-            -Xmx4096m</argLine>
-        </configuration>
-      </plugin -->
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -421,30 +422,6 @@
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-project-info-reports-plugin</artifactId>
-        <version>${maven.project-info-reports.version}</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.apache.maven.shared</groupId>
-            <artifactId>maven-shared-jar</artifactId>
-            <version>1.1</version>
-            <exclusions> <!-- to avoid BCEL compatibility issue with Java 1.8... -->
-              <exclusion>
-                <groupId>org.apache.bcel</groupId>
-                <artifactId>bcel</artifactId>
-              </exclusion>
-            </exclusions>
-          </dependency>
-          <dependency> <!-- to avoid BCEL compatibility issue with Java 1.8... -->
-            <groupId>com.google.code.findbugs</groupId>
-            <artifactId>bcel-findbugs</artifactId>
-            <version>6.0</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-
     </plugins>
 
   </build>
@@ -456,8 +433,8 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-project-info-reports-plugin</artifactId>
         <version>${maven.project-info-reports.version}</version>
-        <configuration> <!-- false to avoid errors ... has no file -->
-          <dependencyDetailsEnabled>false</dependencyDetailsEnabled>
+        <configuration>
+          <dependencyDetailsEnabled>true</dependencyDetailsEnabled>
           <dependencyLocationsEnabled>true</dependencyLocationsEnabled>
         </configuration>
         <reportSets>
@@ -466,9 +443,9 @@
               <report>index</report>
               <report>summary</report>
               <report>dependencies</report>
-              <report>project-team</report>
-              <report>mailing-list</report>
-              <report>license</report>
+              <report>team</report>
+              <report>mailing-lists</report>
+              <report>licenses</report>
               <report>scm</report>
             </reports>
           </reportSet>
@@ -479,11 +456,44 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-javadoc-plugin</artifactId>
         <version>${maven.javadoc.version}</version>
+
         <configuration>
+          <links>
+            <link>https://docs.oracle.com/javase/8/docs/api/</link>
+            <!-- link>https://download.java.net/media/java3d/javadoc/1.5.1/</link (No package-list) -->
+            <link>http://www.jfree.org/jcommon/api/</link>
+            <link>http://www.jfree.org/jfreechart/api/javadoc/</link>
+            <link>https://junit.org/junit4/javadoc/4.12/</link>
+            <link>https://xerces.apache.org/xerces2-j/javadocs/api/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-base/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-naming/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-event/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-interpreter/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-introspection/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-core/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-swing/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-fx/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-web/apidocs/</link>
+            <link>https://simulation.tudelft.nl/dsol/3.0/dsol-demo/apidocs/</link>
+            <link>https://tinylog.org/javadoc/</link>
+            <link>https://djunits.orgs/current/apidocs/</link>
+            <link>http://www.jdom.orgs/apidocs/</link>
+            <link>https://dst.lbl.gov/ACSSoftware/colt/api/</link>
+            <link>https://sim0mq.org/docs/current/apidocs/</link>
+            <link>http://docs.geotools.org/stable/javadocs/</link>
+            <link>http://osm2world.org/docs/javadoc/</link>
+            <link>https://poi.apache.org/apidocs/</link>
+            <link>https://jgrapht.org/javadoc/</link>
+            <link>http://javadoc.scijava.org/ojAlgo/</link>
+          </links>
+          <additionalJOption>-J-Xmx1024m</additionalJOption>
+          <detectJavaApiLink>true</detectJavaApiLink>
           <detectLinks>false</detectLinks>
           <detectOfflineLinks>true</detectOfflineLinks>
           <show>package</show>
+          <!-- stylesheetfile>${basedir}/src/main/resources/development/javadoc/stylesheet.css</stylesheetfile -->
         </configuration>
+
         <reportSets>
           <reportSet>
             <reports>
@@ -644,23 +654,10 @@
         </reportSets>
       </plugin>
 
-      <!-- plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>javancss-maven-plugin</artifactId>
-        <version>${codehaus.javancss.version}</version>
-      </plugin -->
-
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>jdepend-maven-plugin</artifactId>
-        <version>${codehaus.jdepend.version}</version>
-      </plugin>
-
-      <!-- plugin> <groupId>org.codehaus.mojo</groupId> <artifactId>sonar-maven-plugin</artifactId> <version>2.6</version> 
-        </plugin -->
-
     </plugins>
   </reporting>
+
+
 
   <!-- dependency versions for all projects -->
 
@@ -670,16 +667,33 @@
       <artifactId>junit</artifactId>
       <version>${junit.version}</version>
       <scope>test</scope>
-      <optional>true</optional>
     </dependency>
-
+    
     <dependency>
-      <groupId>org.jmockit</groupId>
-      <artifactId>jmockit</artifactId>
-      <version>${jmockit.version}</version>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-module-junit4</artifactId>
+      <version>${powermock.version}</version>
       <scope>test</scope>
     </dependency>
+   
+    <dependency>
+      <groupId>org.powermock</groupId>
+      <artifactId>powermock-api-mockito2</artifactId>
+      <version>${powermock.version}</version>
+      <scope>test</scope>
+    </dependency>
+   
+    <dependency>
+      <groupId>org.tinylog</groupId>
+      <artifactId>tinylog</artifactId>
+      <version>${tinylog.version}</version>
+    </dependency>
+    
   </dependencies>
+
+
+
+  <!-- Dependencies for the subprojects -->
 
   <dependencyManagement>
     <dependencies>
@@ -1001,6 +1015,12 @@
         <version>${findbugs.version}</version>
       </dependency>
 
+      <dependency>
+        <groupId>com.thoughtworks.xstream</groupId>
+        <artifactId>xstream</artifactId>
+        <version>${xstream.version}</version>
+      </dependency>
+
     </dependencies>
   </dependencyManagement>
 
@@ -1010,25 +1030,25 @@
     <repository>
       <name>OTS Repository</name>
       <id>ots</id>
-      <url>http://opentrafficsim.org/maven</url>
+      <url>https://opentrafficsim.org/maven</url>
     </repository>
 
     <repository>
       <name>DSOL Public Repository</name>
       <id>dsol</id>
-      <url>http://simulation.tudelft.nl/maven</url>
+      <url>https://simulation.tudelft.nl/maven</url>
     </repository>
 
     <repository>
       <name>djunits Public Repository</name>
       <id>djunits</id>
-      <url>http://djunits.org/maven</url>
+      <url>https://djunits.org/maven</url>
     </repository>
 
     <repository>
       <name>sim0mq Public Repository</name>
       <id>sim0mq</id>
-      <url>http://sim0mq.org/maven</url>
+      <url>https://sim0mq.org/maven</url>
     </repository>
 
     <repository>
@@ -1039,14 +1059,14 @@
       <name>apache</name>
       <url>http://repo.maven.apache.org/maven2</url>
     </repository>
-
+    
     <repository>
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
-      <id>osgeo</id>
-      <name>OSGeo Maven Repository</name>
-      <url>http://download.osgeo.org/webdav/geotools/</url>
+      <id>boundless</id>
+      <name>boundless</name>
+      <url>http://repo.boundlessgeo.com/main/</url>
     </repository>
 
   </repositories>
@@ -1054,7 +1074,7 @@
   <licenses>
     <license>
       <name>BSD-style license</name>
-      <url>http://www.opentrafficsim.org/docs/license.html</url>
+      <url>http://opentrafficsim.org/docs/license.html</url>
       <distribution>repo</distribution>
     </license>
   </licenses>
@@ -1085,8 +1105,6 @@
       <timezone>1</timezone>
       <roles>
         <role>architect</role>
-        <role>developer</role>
-        <role>maintainance</role>
       </roles>
     </developer>
 
@@ -1095,21 +1113,6 @@
       <name>Peter Knoppers</name>
       <email>p.knoppers@tudelft.nl</email>
       <url>http://www.citg.tudelft.nl/en/about-faculty/departments/transport-and-planning/staff-information/ir-peter-knoppers/</url>
-      <organization>Delft University of Technology, the Netherlands</organization>
-      <organizationUrl>http://www.citg.tudelft.nl</organizationUrl>
-      <timezone>1</timezone>
-      <roles>
-        <role>architect</role>
-        <role>developer</role>
-        <role>maintainance</role>
-      </roles>
-    </developer>
-
-    <developer>
-      <id>gtamminga</id>
-      <name>Guus Tamminga</name>
-      <email>g.f.tamminga@tudelft.nl</email>
-      <url>http://www.citg.tudelft.nl/en/about-faculty/departments/transport-and-planning/staff-information/drs-guus-tamminga-msc/</url>
       <organization>Delft University of Technology, the Netherlands</organization>
       <organizationUrl>http://www.citg.tudelft.nl</organizationUrl>
       <timezone>1</timezone>
@@ -1140,8 +1143,19 @@
 
   <contributors>
     <contributor>
+      <name>Guus Tamminga</name>
+      <email>g.f.tamminga@tudelft.nl</email>
+      <url>http://www.citg.tudelft.nl/en/about-faculty/departments/transport-and-planning/staff-information/drs-guus-tamminga-msc/</url>
+      <organization>Delft University of Technology, the Netherlands</organization>
+      <organizationUrl>http://www.citg.tudelft.nl</organizationUrl>
+      <timezone>1</timezone>
+      <roles>
+        <role>architect</role>
+        <role>developer</role>
+      </roles>
     </contributor>
   </contributors>
+  
 
   <!-- Environment Settings -->
 
@@ -1150,6 +1164,19 @@
     <url>http://simulation.tudelft.nl:8085/browse/</url>
   </issueManagement>
 
+
+  <!-- In order for distributionManagement to work, include the following
+    in local settings.xml:
+    <servers>
+      <server>
+        <id>ots-deployment</id>
+        <username>ots</username>
+        <password>(if wanted)</password>
+      </server>
+    </servers>
+  -->
+  
+  
   <distributionManagement>
     <downloadUrl>http://opentrafficsim.org/maven</downloadUrl>
     <repository>
